# trade_bot

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: Bot.hpp  ConfigLoader.hpp  Strategy.hpp  TradeApiClient.hpp  TradeLogger.hpp  UserStreamClient.hpp  Utils.hpp  WebSocketClient.hpp
src/: Bot.cpp  ConfigLoader.cpp  Strategy.cpp  TradeApiClient.cpp  UserStreamClient.cpp  Utils.cpp  WebSocketClient.cpp  main.cpp
